fix layout problem

--- a/Markup/css/styles.css
+++ b/Markup/css/styles.css
@@ -1956,7 +1956,7 @@ a.btn-action {
 }
 .datepicker-container i{
     position: absolute;
-    top: 6px;
+    top: 3px;
     right: 10px;
     color: #282828;
 }
